fix: add backup scripts and update frontend

--- a/backend/chytozavrik/templates/registration/password_reset_email.html
+++ b/backend/chytozavrik/templates/registration/password_reset_email.html
@@ -1,9 +1,9 @@
 {% load i18n %}{% autoescape off %}
-Ви отримали цей лист через те, що зробили запит на перевстановлення пароля для облікового запису користувача на chytozavrik-frontend.vercel.app
+Ви отримали цей лист через те, що зробили запит на перевстановлення пароля для облікового запису користувача на chytozavryk.top
 
 Будь ласка, перейдіть на цю сторінку, та оберіть новий пароль:
 {% block reset_link %}
-https://chytozavrik-frontend.vercel.app/?auth=new-password&uid={{uid}}&token={{token}}
+https://chytozavryk.top/?auth=new-password&uid={{uid}}&token={{token}}
 {% endblock %}
 Ваше користувацьке ім'я, у випадку, якщо ви забули: {{ user.get_username }}
 
