--- a/frontend/src/app/(main)/parents/components/FormFields/AvaratsFields/AvatarFields.module.scss
+++ b/frontend/src/app/(main)/parents/components/FormFields/AvaratsFields/AvatarFields.module.scss
@@ -19,7 +19,10 @@
   margin: 0 auto;
 
   & label {
+    position: relative;
     cursor: pointer;
+    width: 48px;
+    height: 48px;
   }
 
   @include breakpoint(tablet) {
@@ -33,23 +36,20 @@
   }
 }
 
-.radio {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-
-.radio:hover + label > .image {
-  border: 3px solid #7791fa;
-  border-radius: 100px;
-}
-
-.radio:checked + label > .image {
+.radioWrapper input[type='radio']:hover + .image {
   border: 3px solid #455fc8;
   border-radius: 100px;
 }
 
+.radio {
+  opacity: 0;
+  width: 48px;
+  height: 48px;
+}
+
 .image {
+  position: absolute;
+  left: 0;
   width: 48px;
   height: 48px;
   margin-left: -10px;
@@ -58,6 +58,7 @@
     margin-left: -28px;
   }
 }
+
 .error {
   color: getColor(error, 40);
 }
