--- a/frontend/src/app/(main)/components/Partners/Partners.module.scss
+++ b/frontend/src/app/(main)/components/Partners/Partners.module.scss
@@ -24,10 +24,10 @@
 }
 
 .container {
-  padding-block: 20px;
+  padding: 20px 0;
 
   @include breakpoint(tablet) {
-    padding-block: 24px;
+    padding: 24px 0;
   }
 
   @include breakpoint(desktop) {
@@ -51,7 +51,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
   height: 50px;
 
   & img {
@@ -61,10 +60,6 @@
 
   &--nspu {
     padding-block: 6px;
-  }
-
-  @include breakpoint(false, tablet) {
-    width: 50%;
   }
 
   @include breakpoint(tablet) {
@@ -82,4 +77,18 @@
       padding-block: 27px;
     }
   }
+}
+
+.swiperContainer {
+  overflow-y: visible !important;
+  width: 100% !important;
+  text-rendering: auto;
+}
+
+//:global(.swiper-slide) {
+//  transition: transform 0.4s ease-in-out;
+//}
+
+.swiper-slide-active {
+  transform: scale(1.59);
 }
