feat: update frontend

--- a/frontend/src/app/(wigwam)/components/header/NavbarMob/NavbarMob.module.scss
+++ b/frontend/src/app/(wigwam)/components/header/NavbarMob/NavbarMob.module.scss
@@ -5,8 +5,8 @@
   background: getColor(blue, 90);
   position: sticky;
   top: 0;
-  z-index: 999;
-  padding: 14px 0px;
+  z-index: 1004;
+  padding: 14px 0;
   max-height: 64px;
 }
 
