--- a/frontend/src/app/(wigwam)/wigwam/[childId]/awards/components/MonsterDetails/styles.module.scss
+++ b/frontend/src/app/(wigwam)/wigwam/[childId]/awards/components/MonsterDetails/styles.module.scss
@@ -69,6 +69,10 @@
     justify-content: space-between;
     padding-left: 15px;
     padding-right: 15px;
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+    user-select: none;
 
     .slides {
       display: flex;
