--- a/frontend/src/app/(main)/parents/components/Parents/Parents.module.scss
+++ b/frontend/src/app/(main)/parents/components/Parents/Parents.module.scss
@@ -88,6 +88,7 @@
   padding: 16px 28px 16px 24px;
   display: flex;
   gap: 8px;
+  z-index: 2;
 
   @include breakpoint(tablet) {
     width: 263px;
