--- a/frontend/src/components/Cookies/styles.module.scss
+++ b/frontend/src/components/Cookies/styles.module.scss
@@ -16,6 +16,15 @@
   gap: 40px;
   justify-content: space-between;
   flex-shrink: 0;
+  z-index: 4;
+
+  & .close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 16px;
+    height: 16px;
+  }
 
   & p {
     color: $black;
@@ -34,7 +43,7 @@
     text-decoration-line: underline;
   }
 
-  & button {
+  & .button {
     width: 100%;
   }
 
@@ -45,7 +54,7 @@
     gap: 44px;
     padding: 48px 24px;
 
-    & button {
+    & .button {
       width: 216px;
       align-self: flex-start;
     }
@@ -59,7 +68,7 @@
     padding: 24px;
     gap: 36px;
 
-    & button {
+    & .button {
       align-self: flex-end;
       height: 64px;
       flex-shrink: 0;
@@ -75,10 +84,18 @@
     gap: 36px;
     height: 167px;
 
-    & button {
+    & .close {
+      width: 20px;
+      height: 20px;
+      top: 20px;
+      right: 20px;
+    }
+
+    & .button {
       align-self: center;
       height: 64px;
       flex-shrink: 0;
     }
   }
 }
+
