--- a/frontend/src/app/globals.scss
+++ b/frontend/src/app/globals.scss
@@ -10,6 +10,10 @@
     margin: 0;
   }
 
+  body {
+    overflow-x: hidden;
+  }
+
   html,
   body {
     display: flex;
@@ -17,8 +21,6 @@
     box-sizing: border-box;
     max-width: 100vw;
     height: 100%;
-    overflow-x: hidden;
-
     font-family: var(--raleway-font);
     font-weight: 300;
     font-size: 16px;
